--- a/first_file.tex
+++ b/first_file.tex
@@ -3,7 +3,9 @@
 
 \begin{document}
 
-Hello Latex, This is my first part.
+Hello Latex, This is my first part.\newline
+this is the part i ve added
+
 
 \input{second_file}
 
