update first.tex on 26 jan 2017
adding 2:59 line

--- a/first_file.tex
+++ b/first_file.tex
@@ -4,7 +4,8 @@
 \begin{document}
 
 Hello Latex, This is my first part.\newline
-this is the part i ve added
+this is the part i ve added.
+this is what i have added at 2:59
 
 
 \input{second_file}
