--- a/first_file.tex
+++ b/first_file.tex
@@ -4,8 +4,9 @@
 \begin{document}
 
 Hello Latex, This is my first part.\newline
-this is the part i ve added.
-this is what i have added at 2:59
+this is the part i ve added.\newline
+this is what i have added at 2:59\newline
+this is the new branch added.
 
 
 \input{second_file}
