--- a/first_file.tex
+++ b/first_file.tex
@@ -3,9 +3,8 @@
 
 \begin{document}
 
-Hello Latex, This is my first part.\newline
-this is the part i ve added.
-this is what i have added at 2:59
+line 1.\newline
+line 2.
 
 
 \input{second_file}
