--- a/first_file.tex
+++ b/first_file.tex
@@ -7,8 +7,7 @@ Hello Latex, This is my first part.\newline
 this is the part i ve added.\newline
 this is what i have added at 2:59\newline
 this is the new branch added.
-
-
+ceci est en francais.
 \input{second_file}
 
 \end{document}
