--- a/first_file.tex
+++ b/first_file.tex
@@ -8,6 +8,7 @@ this is the part i ve added.\newline
 this is what i have added at 2:59\newline
 this is the new branch added.
 ceci est en francais.
+i ve changed this line directly in the first_file.tex of the patch 1 branch
 \input{second_file}
 
 \end{document}
