--- a/first_file.tex
+++ b/first_file.tex
@@ -9,6 +9,7 @@ this is what i have added at 2:59\newline
 this is the new branch added.
 ceci est en francais.
 i ve changed this line directly in the first_file.tex of the patch 1 branch
+i want to add this to the master branch by branch patch 3
 \input{second_file}
 
 \end{document}
